Lesson: Agent OK

--- a/LangGraphAgent/app/Agent.ipynb
+++ b/LangGraphAgent/app/Agent.ipynb
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T20:33:17.007825Z",
-     "start_time": "2025-02-10T20:33:14.315156Z"
+     "end_time": "2025-02-11T14:27:15.246491Z",
+     "start_time": "2025-02-11T14:27:13.005341Z"
     }
    },
    "cell_type": "code",
@@ -71,15 +71,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:20:28.936062Z",
-     "start_time": "2025-02-10T21:20:28.926031Z"
+     "end_time": "2025-02-11T14:28:04.193216Z",
+     "start_time": "2025-02-11T14:28:04.178090Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from general_conf.imports import *\n",
-    "load_dotenv(find_dotenv())\n",
-    "print(\"API KEY INGRESADA CON ÉXITO\")"
+    "from dotenv import find_dotenv, load_dotenv\n",
+    "import os\n",
+    "\n",
+    "dotenv_path = find_dotenv()  # Encuentra la ruta del archivo .env\n",
+    "load_dotenv(dotenv_path)  # Carga las variables de entorno desde el archivo .env\n",
+    "\n",
+    "print(\"Ruta del archivo .env:\", dotenv_path)\n",
+    "\n",
+    "print(\"OS ENVIRONMENT VARIABLES:\\n\")\n",
+    "\n",
+    "if os.getenv(\"OPENAI_API_KEY\"):\n",
+    "    print(\"OpenAi Key Set\")\n",
+    "    print(\"Valor de OPENAI_API_KEY:\", os.getenv(\"OPENAI_API_KEY\"))\n",
+    "else:\n",
+    "    print(\"No OpenAi Key Set\")\n",
+    "\n",
+    "if os.getenv(\"LANGSMITH_API_KEY\"):\n",
+    "    print(\"LangSmith Key Set\")\n",
+    "else:\n",
+    "    print(\"No LangSmith Key Set\")\n",
+    "\n",
+    "print(\"LANGSMITH_TRACING:\", os.getenv(\"LANGSMITH_TRACING\"))  # Debe imprimir \"true\"\n",
+    "print(\"LANGSMITH_ENDPOINT:\", os.getenv(\"LANGSMITH_ENDPOINT\"))  # Debe imprimir la URL correcta"
    ],
    "id": "d718c32aed409de2",
    "outputs": [
@@ -87,7 +108,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API KEY INGRESADA CON ÉXITO\n"
+      "Ruta del archivo .env: C:\\Users\\Luis Pizarro\\PycharmProjects\\DHAgent\\LangGraphAgent\\.env\n",
+      "OS ENVIRONMENT VARIABLES:\n",
+      "\n",
+      "OpenAi Key Set\n",
+      "Valor de OPENAI_API_KEY: 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\n",
+      "LangSmith Key Set\n",
+      "LANGSMITH_TRACING: true\n",
+      "LANGSMITH_ENDPOINT: https://api.smith.langchain.com\n"
      ]
     }
    ],
@@ -96,14 +124,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:20:30.890974Z",
-     "start_time": "2025-02-10T21:20:30.846061Z"
+     "end_time": "2025-02-11T14:28:11.097615Z",
+     "start_time": "2025-02-11T14:28:11.059897Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from langchain_openai import ChatOpenAI\n",
-    "\n",
+    "from openai import models\n",
     "def multiply(a:int, b:int) -> int:\n",
     "    \"\"\"\n",
     "    Multiplicar a y b.\n",
@@ -134,7 +162,7 @@
     "    return a / b\n",
     "\n",
     "tools = [add, multiply, divide]\n",
-    "llm = ChatOpenAI(model= \"gpt-4o\")\n",
+    "llm = ChatOpenAI(model= \"gpt-3.5-turbo\")\n",
     "\n",
     "# For this ipynb we set parallel tool calling to false as math generally is done sequentially, and this time we have 3 tools that can do math\n",
     "# the OpenAI model specifically defaults to parallel tool calling for efficiency, see https://python.langchain.com/docs/how_to/tool_calling_parallel/\n",
@@ -155,8 +183,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:20:34.379967Z",
-     "start_time": "2025-02-10T21:20:34.285568Z"
+     "end_time": "2025-02-11T14:28:13.980991Z",
+     "start_time": "2025-02-11T14:28:13.925843Z"
     }
    },
    "cell_type": "code",
@@ -202,8 +230,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:20:52.618240Z",
-     "start_time": "2025-02-10T21:20:52.410446Z"
+     "end_time": "2025-02-11T14:28:16.269250Z",
+     "start_time": "2025-02-11T14:28:16.154688Z"
     }
    },
    "cell_type": "code",
@@ -248,13 +276,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:23:32.846131Z",
-     "start_time": "2025-02-10T21:23:28.174161Z"
+     "end_time": "2025-02-11T14:28:21.435704Z",
+     "start_time": "2025-02-11T14:28:18.284593Z"
     }
    },
    "cell_type": "code",
@@ -265,13 +293,13 @@
    ],
    "id": "bb1d651b50a96273",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-10T21:24:02.012369Z",
-     "start_time": "2025-02-10T21:24:02.005738Z"
+     "end_time": "2025-02-11T14:28:23.324540Z",
+     "start_time": "2025-02-11T14:28:23.304546Z"
     }
    },
    "cell_type": "code",
@@ -291,8 +319,8 @@
       "Suma 3 y 4. El resultado multiplicalo por 2. El resultado final dividelo por 5 \n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  add (call_Tzkktyv36Kg30e3h04gKpTYv)\n",
-      " Call ID: call_Tzkktyv36Kg30e3h04gKpTYv\n",
+      "  add (call_j97oQ5Gdv7VbwhOCTgjqOWEH)\n",
+      " Call ID: call_j97oQ5Gdv7VbwhOCTgjqOWEH\n",
       "  Args:\n",
       "    a: 3\n",
       "    b: 4\n",
@@ -302,8 +330,8 @@
       "7\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  multiply (call_cj4LSy0L6Cml6qoYJlshtZMZ)\n",
-      " Call ID: call_cj4LSy0L6Cml6qoYJlshtZMZ\n",
+      "  multiply (call_jU9Oot7qdu6GzQ1O2VtlG1Gn)\n",
+      " Call ID: call_jU9Oot7qdu6GzQ1O2VtlG1Gn\n",
       "  Args:\n",
       "    a: 7\n",
       "    b: 2\n",
@@ -313,8 +341,8 @@
       "14\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "Tool Calls:\n",
-      "  divide (call_cpv5wlTvaeEUVQBI97Rs5IAX)\n",
-      " Call ID: call_cpv5wlTvaeEUVQBI97Rs5IAX\n",
+      "  divide (call_0GXLbFURPsxGTDtH0QHHwBNv)\n",
+      " Call ID: call_0GXLbFURPsxGTDtH0QHHwBNv\n",
       "  Args:\n",
       "    a: 14\n",
       "    b: 5\n",
@@ -324,10 +352,40 @@
       "2.8\n",
       "==================================\u001B[1m Ai Message \u001B[0m==================================\n",
       "\n",
-      "El resultado final es 2.8.\n"
+      "El resultado final de la operación es 2.8.\n"
      ]
     }
    ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# LANGSMITH\n",
+    "LangSmith nos da el seguimiento \n",
+    "### Debemos tener las variables bien configuradas en el archivo config.py\n",
+    "- LANGCHAIN_API_KEY\n",
+    "- LANGCHAIN_ENDPOINT\n",
+    "- LANGCHAIN_TRACING_V2\n",
+    "- LANGCHAIN_PROJECT"
+   ],
+   "id": "92fd57828057360f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T14:28:34.187218Z",
+     "start_time": "2025-02-11T14:28:34.169513Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "os.environ[\"LANGSMITH_PROJECT\"] = \"LangGraphCourse\""
+   ],
+   "id": "a3cec95f1ceb3f67",
+   "outputs": [],
    "execution_count": 9
   }
  ],
