--- a/LangGraphAgent/app/Chain.ipynb
+++ b/LangGraphAgent/app/Chain.ipynb
@@ -26,12 +26,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-07T16:14:33.731520Z",
-     "start_time": "2025-02-07T16:14:29.168348Z"
+     "end_time": "2025-02-11T13:17:48.243156Z",
+     "start_time": "2025-02-11T13:17:45.706192Z"
     }
    },
    "source": [
-    "from google.auth import message\n",
     "%%capture --no-stderr\n",
     "%pip install --quiet -U langchain_openai langchain_core langgraph"
    ],
@@ -69,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-07T17:12:04.687295Z",
-     "start_time": "2025-02-07T17:12:04.672497Z"
+     "end_time": "2025-02-11T13:17:50.270650Z",
+     "start_time": "2025-02-11T13:17:50.013720Z"
     }
    },
    "cell_type": "code",
@@ -111,7 +110,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -125,15 +124,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-07T18:21:51.710329Z",
-     "start_time": "2025-02-07T18:21:49.489732Z"
+     "end_time": "2025-02-11T13:17:57.988228Z",
+     "start_time": "2025-02-11T13:17:56.030598Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from general_conf.imports import *\n",
     "load_dotenv(find_dotenv())\n",
-    "print(\"Ingresando la APIKEY\")\n"
+    "print(\"Ingresando la APIKEY\")\n",
+    "\n"
    ],
    "id": "55aa941bffdcf51d",
    "outputs": [
@@ -145,7 +145,7 @@
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 4
   },
   {
    "metadata": {},
