--- a/LangGraphAgent/app/module 2/State Reducers.ipynb
+++ b/LangGraphAgent/app/module 2/State Reducers.ipynb
@@ -4,7 +4,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "# Statae Reducers\n",
+    "# State Reducers\n",
     "\n",
     "## Review\n",
     "\n",
